@@ -14,6 +14,8 @@
 	flash8 : don't use b64 encoding for text ressources
 	php : fixed bug in Hash.exists for null values and Reflect.callMethod
 	js/flash9 : throw exception in Xml.parse when unclosed node
+	all : improve return type progagation in inlined expression (fix some VerifyErrors)
+	all : optimize {const} into const
 
 2009-07-26: 2.04
 	flash9 : fixed get_full_path error with -D fdb
